kubernetes/app/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-db
  namespace: immich
  labels:
    app: immich-db
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: immich-db
